# edge-ai-suites

.github/: CODEOWNERS
.github/workflows/: visual-search-qa-scans.yml
metro-ai-suite/metro-sdk-manager/docs/user-guide/: index.md
metro-ai-suite/sensor-fusion-for-traffic-management/: README.md
metro-ai-suite/sensor-fusion-for-traffic-management/docker/: README_Docker.md
metro-ai-suite/smart-route-planning-agent/: README.md  arch.md  pyproject.toml  setup.sh
metro-ai-suite/smart-route-planning-agent/ai-route-planner/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
metro-ai-suite/smart-route-planning-agent/ai-route-planner/agents/: route_planner.py
metro-ai-suite/smart-route-planning-agent/docker/: compose.edge-a.yaml  compose.edge-b.yaml  compose.yaml
metro-ai-suite/smart-route-planning-agent/docs/: run-demo.md
metro-ai-suite/smart-route-planning-agent/docs/user-guide/: Overview.md  get-started.md
metro-ai-suite/smart-route-planning-agent/docs/user-guide/api-docs/: openapi.yaml
metro-ai-suite/smart-traffic-intersection-agent/: .gitignore  README.md  setup.sh
metro-ai-suite/smart-traffic-intersection-agent/docker/: compose.yaml
metro-ai-suite/smart-traffic-intersection-agent/docs/user-guide/: Overview.md  environment-variables.md  get-started.md
metro-ai-suite/smart-traffic-intersection-agent/scripts/: setup_smart_intersection_release.sh
metro-ai-suite/smart-traffic-intersection-agent/src/traffic-intelligence/: README.md
robotics-ai-suite/: README.md
(+11 files in other folders)
