# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scene-intelligence"
version = "1.0.0"
description = "Scene Intelligence microservice for traffic analysis with VLM integration"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.11.5"
structlog = "^24.4.0"
paho-mqtt = "^2.1.0"
aiohttp = "^3.8.0"
python-multipart = "^0.0.16"
httpx = "^0.27.0"
tenacity = "^9.0.0"
requests = "^2.31.0"
python-json-logger = "^2.0.7"

